# fsnotify

./: .gitignore  CMakeLists.txt  README.md
src/: notify.c  notify.h
tests/: notify_test.c
